--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <validation.api.version>2.0.1.Final</validation.api.version>
         <hib.validator.version>5.2.4.Final</hib.validator.version>
         <swagger.version>2.8.0</swagger.version>
+        <sonar.version>3.4.0.905</sonar.version>
     </properties>
 
     <dependencies>
@@ -98,6 +99,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>${sonar.version}</version>
             </plugin>
         </plugins>
     </build>
